tests/parser/define.4.bad.error
error: Malformed definition
  --> test:4:0
   |
 4 |  (define x)
   |  ^^^^^^^^^^ expected value
